--- a/src/pages/indexPage/indexPage.html
+++ b/src/pages/indexPage/indexPage.html
@@ -134,7 +134,7 @@
 
 
       <div class="common-rank"
-           ng-if="newViewData.user_ranking_company && newViewData.user_ranking_company.length != 0">
+           ng-if="newViewData.user_ranking_company && newViewData.user_ranking_company.user_count != 0">
         <div class="rank-title">
           <div class="left company">个人排行榜-公司</div>
           <div class="people-num" style="display:none;">{{newViewData.personal_ranking_team.user_count ||
