--- a/src/pages/school/schoolItemList/schoolItemList.html
+++ b/src/pages/school/schoolItemList/schoolItemList.html
@@ -12,10 +12,10 @@
           <img ng-src="build/assets/img/login/product_logo.png" class="imgStyle" style="border-radius: 50%">
           <div class="row rowStyleDetail">
             <div class="col-50 schoolName">{{item.teacher_name}}</div>
-            <div class="col-50 schoolTime">{{}}</div>
+            <div class="col-50 schoolTime" ng-if="item.bind_time!=0">{{item.bind_time}}</div>
           </div>
           <div class="row rowStyleDetail">
-            <div class="col-50 personName">{{}}</div>
+            <div class="col-50 personName">{{item.subjectString}}</div>
             <div class="col-50 " style="text-align: right" ng-class="{'fontColor':config.font,'personName' :!config.font}">{{}}</div>
           </div>
         </a>
